fix testing for postman
